Local commit with Webresources

--- a/WebResources/WebResources.csproj
+++ b/WebResources/WebResources.csproj
@@ -69,13 +69,39 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bin\coretools\CrmSvcUtil.exe" />
+    <Content Include="bin\coretools\CrmSvcUtil.xml" />
+    <Content Include="bin\coretools\Microsoft.Crm.Sdk.Proxy.dll" />
+    <Content Include="bin\coretools\Microsoft.IdentityModel.Clients.ActiveDirectory.dll" />
+    <Content Include="bin\coretools\Microsoft.IdentityModel.Clients.ActiveDirectory.WindowsForms.dll" />
+    <Content Include="bin\coretools\Microsoft.Xrm.Sdk.Deployment.dll" />
+    <Content Include="bin\coretools\Microsoft.Xrm.Sdk.dll" />
+    <Content Include="bin\coretools\Microsoft.Xrm.Tooling.Connector.dll" />
+    <Content Include="bin\coretools\Microsoft.Xrm.Tooling.CrmConnectControl.dll" />
+    <Content Include="bin\coretools\Microsoft.Xrm.Tooling.Ui.Styles.dll" />
+    <Content Include="bin\coretools\Other Redistributable.txt" />
+    <Content Include="bin\coretools\SolutionPackager.exe" />
+    <Content Include="bin\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll" />
+    <Content Include="bin\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml" />
+    <Content Include="Webresources\D365_resources\js\checkin.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bin\coretools\LicenseTerms.docx" />
+    <Content Include="bin\coretools\CrmSvcUtil.exe.config" />
     <None Include="packages.config" />
+    <Content Include="spkl\unpack.bat" />
+    <Content Include="spkl\pack+import.bat" />
+    <Content Include="spkl\instrument-plugin-code.bat" />
+    <Content Include="spkl\earlybound.bat" />
+    <Content Include="spkl\download-webresources.bat" />
+    <Content Include="spkl\deploy-workflows.bat" />
+    <Content Include="spkl\deploy-webresources.bat" />
+    <Content Include="spkl\deploy-plugins.bat" />
+    <Content Include="spkl.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -84,11 +110,11 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="D365_resources\html\" />
-    <Folder Include="D365_resources\img\" />
+    <Folder Include="Webresources\D365_resources\html\" />
+    <Folder Include="Webresources\D365_resources\img\" />
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="D365_resources\js\checkin.ts" />
+    <TypeScriptCompile Include="Webresources\D365_resources\js\checkin.ts" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
