--- a/WebResources/packages.config
+++ b/WebResources/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net452" />
+  <package id="Microsoft.CrmSdk.CoreTools" version="9.0.0.7" targetFramework="net452" />
+  <package id="spkl" version="1.0.226" targetFramework="net452" />
 </packages>
